# PSA

./: .coverage  .gitignore  CLAUDE.md  README.md  psa.yaml  pyproject.toml
.claude-plugin/: .mcp.json  README.md  marketplace.json  plugin.json
.codex-plugin/: README.md  plugin.json
benchmarks/: convomem_bench.py  locomo_bench.py  longmemeval_bench.py
docs/: persistent_semantic_atlas_execution_guide_v6.md
examples/: HOOKS_TUTORIAL.md  basic_mining.py  convo_import.py  gemini_cli_setup.md  mcp_setup.md
hooks/: README.md  mempal_precompact_hook.sh  mempal_save_hook.sh
mempalace/: convo_miner.py
psa/: README.md  __init__.py  __main__.py  anchor.py  atlas.py  cli.py  coactivation.py  config.py  consolidation.py  constraint_scorer.py  conversation_parser.py  convo_miner.py  dialect.py  embeddings.py  entity_detector.py  entity_registry.py  facet_extractor.py  fingerprints.py  forgetting.py  full_atlas_scorer.py  health.py  hooks_cli.py  inspect.py  knowledge_graph.py  layers.py  lifecycle.py  llm.py  mcp_server.py  memory_object.py  memory_scorer.py  migrate.py  miner.py  normalize.py  onboarding.py  packer.py  pipeline.py  query_frame.py  retriever.py  room_detector_local.py  searcher.py  (+7 more)
scripts/: refine_anchor_cards.py
tests/: conftest.py  test_advertisement_config.py  test_advertisement_decay.py  test_advertisement_metadata.py  test_advertisement_reinforcement.py  test_advertisement_writer.py  test_anchor.py  test_atlas.py  test_atlas_metadata_inheritance.py  test_benchmarks.py  test_cli_advertisement.py  test_cli_atlas_curate.py  test_cli_atlas_decay.py  test_cli_atlas_refine.py  test_cli_diag.py  test_coactivation.py  test_config.py  test_consolidation.py  test_constraint_scorer.py  test_conversation_parser.py  test_convo_miner.py  test_curation_curator.py  test_curation_extractors.py  test_curation_ngrams.py  test_curation_pool.py  test_data_split.py  test_diag_activation.py  test_diag_advertisement.py  (+56 more)
(+102 files in other folders)
